--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "lint": "eslint bin lib",
     "prepublishOnly": "npm run lint && npm run test",
-    "test": "jest lib/*.spec.js"
+    "test": "jest lib/**/*.spec.js"
   },
   "keywords": [
     "less",
@@ -28,6 +28,7 @@
     "jest": "^22.4.2"
   },
   "dependencies": {
+    "lodash.flow": "^3.5.0",
     "stylus": "^0.54.5",
     "yargs": "^11.0.0"
   }
